--- a/src/components/VSCodeEditor.css
+++ b/src/components/VSCodeEditor.css
@@ -10,6 +10,15 @@
 	color: #b1b1b3;
 } */
 
+body {
+  margin: 0;
+  height: 100vh;
+  background-color: rgb(40, 40, 40);
+  display: grid;
+  place-items: center;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+}
+
 p,
 ul,
 ol {
