--- a/src/components/VSCodeEditor.css
+++ b/src/components/VSCodeEditor.css
@@ -28,8 +28,8 @@ ol {
 }
 
 .window {
-	width: auto;
-	height: auto;
+	max-width: 99vh;
+	max-height: 95vh;
 	margin: auto;
 	background-color: #000;
 	box-shadow: 0 0 25px -7px #000;
@@ -41,6 +41,9 @@ ol {
 	height: 30px;
 	background-color: #202020;
 }
+
+/* * { outline: solid 0.05rem hsla(210, 100%, 100%, 0.5); } */
+
 
 .window__controls {
 	display: inline-flex;
@@ -72,6 +75,8 @@ ol {
 .window-main {
 	padding: 0.5em;
 	color: #4e4e4e;
+	max-height: 50em;
+	overflow-y: auto;
 }
 
 .window-main ol {
@@ -91,7 +96,7 @@ ol {
 	counter-increment: item;
 	padding: 0 10px;
 
-  display: inline-block;
+  /* display: inline-block; */
   /* content: counter(item) ") "; */
   /* counter-increment: item; */
   width: 2em;
@@ -103,6 +108,33 @@ ol {
   /* text-emphasis: bold; */
   /* text-decoration: */
   /* text-size-adjust: 110%; */
+}
+
+.window-bottom {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	/* align-items: right; */
+	height: 30px;
+	/* border: white; */
+	border-width: 1px;
+	position: relative;
+}
+
+.window-bottom-statictext {
+	color: #b1b1b3;
+	text-align: right;
+	margin: 0 2%;
+	/* position: absolute; */
+	bottom: 0;
+}
+
+.window-bottom-statictext select {
+	background-color: rgba(0, 0, 0, 0);
+	color: #b1b1b3;
+	border: none;
+	/* text-align: right; */
+	/* margin: 0 2%; */
 }
 
 a {
@@ -131,7 +163,7 @@ a {
 @media only screen and (max-width: 601px) {
 	.window {
 		width: 350px;
-		/* height: 350px; */
+		height: 350px;
 		font-size: 0.65em;
 	}
 
