--- a/src/components/VSCodeEditor.css
+++ b/src/components/VSCodeEditor.css
@@ -10,13 +10,19 @@
 	color: #b1b1b3;
 } */
 
-body {
+.window_page {
   margin: 0;
+	width: 100%;
   height: 100vh;
   background-color: rgb(40, 40, 40);
   display: grid;
   place-items: center;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+}
+
+.window.animate {
+	-webkit-animation: barrelRoll 2s ease-in-out;
+	animation: barrelRoll 2s ease-in-out;
 }
 
 p,
@@ -115,6 +121,31 @@ ol {
   /* text-size-adjust: 110%; */
 }
 
+.line-numbering {
+  position: relative;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1; /* make sure the line numbering is on top of the scrolling content */
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td {
+  border: 1px solid #ccc;
+  padding: 5px;
+}
+
+td.line-number {
+  position: sticky;
+  left: 0;
+  z-index: 1;
+  /* background-color: #fff; */
+}
+
 .window-bottom {
 	display: flex;
 	flex-direction: row;
@@ -186,4 +217,16 @@ ol {
 	.window-main ol li:before {
 		padding: 0;
 	}
+}
+
+@-webkit-keyframes barrelRoll {
+	0%  {transform: rotate(0deg)}
+	80% {transform: rotate(370deg)}
+	100% {transform: rotate(360deg)}
+}
+
+@keyframes barrelRoll {
+	0%  {transform: rotate(0deg)}
+	80% {transform: rotate(370deg)}
+	100% {transform: rotate(360deg)}
 }
